--- a/src/components/navigation/Nav.css
+++ b/src/components/navigation/Nav.css
@@ -3,6 +3,8 @@
     opacity: 0.8;
 }
 
-.show{
-    transform: translateX(0%);
+@media(max-width:600px){
+    .active{
+        opacity: 1;
+    }
 }
