--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,15 @@
     scroll-behavior: smooth;
     text-decoration: none;
 }
+body::-webkit-scrollba{
+    background-color:#874ef5;
+    width:16px;
+}
+body::-webkit-scrollbar-track{
+    background-color:#874ef5;
+}
+body::-webkit-scrollbar-thumb{
+    background-color:#874ef5;
+    border-radius:8px;
+    border:4px solid #874ef5;
+}
